--- a/css/styles.css
+++ b/css/styles.css
@@ -16,39 +16,7 @@ a {
     text-decoration: none;
 }
 
-.nav {
-
-    width: 100%;
-    height: 70px;
-    background-image: linear-gradient(to right, rgba(90, 38, 187, 0.5), rgb(51, 34, 199));
-}
-
-.logo {
-    display: flex;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
-
-}
-
-.carrito,
-.usuario {
+.img a img {
     width: 30px;
     height: 30px;
-}
-
-.container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.menu {
-    display: none;
-}
-
-@media screen and (min-width: 1024px) {
-    .menu {
-        display: flex;
-    }
 }
