--- a/css/styles.css
+++ b/css/styles.css
@@ -25,3 +25,21 @@ a {
     width: 40px;
     height: 40px;
 }
+.carouselimg{
+  height: 300px
+}
+/*Categorias*/
+.linkscategorias a{
+  width: 45%;
+  margin-bottom: 2%;
+}
+.categoriasimg{
+  border-radius: 50%;
+  width: 100%;
+}
+@media (min-width: 768px){
+  .linkscategorias a{
+    width: 28%;
+  }
+
+}
